src/test/deca/syntax/valid/synt/class_new_operator.deca
/*
    Description : Test sur une utilisation simple de l'opérateur new

    Résultat : OK
*/
class A{}
class B{
    A p = new A();
}
